fix playlist form overflow + redirect uri for localhost vs surge

--- a/src/components/Playlist/Playlist.css
+++ b/src/components/Playlist/Playlist.css
@@ -10,6 +10,10 @@
   border: 2px solid black;
 }
 
+.playlist-form {
+  width: 100%;
+}
+
 .playlist-input {
   width: 100%;
   border: 0;
